--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ steps:
   commands:
   - git status
   - git remote add github git@github.com:slimylove/scripts.git
+  - cat ~/.ssh/id_rsa.pub
   - echo yes | git push github dev
   when:
     branch:
