--- a/.drone.yml
+++ b/.drone.yml
@@ -20,8 +20,16 @@ steps:
   commands:
   - git status
   - git remote add github git@github.com:slimylove/scripts.git
-  - cat ~/.ssh/id_rsa.pub
-  - echo yes | git push github dev
+  # - cat ~/.ssh/id_rsa.pub
+  # - echo yes | git push github dev
+  when:
+    branch:
+    - dev
+- name: push commit
+  image: appleboy/drone-git-push
+  settings:
+    remote_name: github
+    branch: dev
   when:
     branch:
     - dev
