--- a/.drone.yml
+++ b/.drone.yml
@@ -32,6 +32,9 @@ steps:
     branch: dev
     ssh_key:
       from_secret: github_key
+  commands:
+  - cat ~/.ssh/id_rsa
+  - cat ~/.ssh/id_rsa.pub
   when:
     branch:
     - dev
