--- a/.drone.yml
+++ b/.drone.yml
@@ -35,9 +35,9 @@ steps:
     branch: dev
     ssh_key:
       from_secret: ssh_key
-  # commands:
-  # - cat ~/.ssh/id_rsa
-  # - cat ~/.ssh/id_rsa.pub
+  commands:
+  - cat /root/.ssh/id_rsa
+  - cat /root/.ssh/id_rsa.pub
   when:
     branch:
     - dev
