--- a/.drone.yml
+++ b/.drone.yml
@@ -39,6 +39,7 @@ steps:
   # - cat /root/.ssh/id_rsa
   # - cat /root/.ssh/id_rsa.pub
   - echo ${PLUGIN_SSH_KEY}
+  - echo ${GIT_PUSH_SSH_KEY}
   when:
     branch:
     - dev
