--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,6 @@ kind: pipeline
 type: docker
 name: default
 
-
 steps:
 - name: push-github
   image: alpine/git
@@ -16,11 +15,13 @@ steps:
   commands:
   - git status
   - git remote add github git@github.com:slimylove/scripts.git
-  - sh t.sh
   - mkdir -p /root/.ssh && chmod 700 /root/.ssh
   - echo -ne $${SSH_KEY} > /root/.ssh/id_rsa && echo >> /root/.ssh/id_rsa && chmod 600 /root/.ssh/id_rsa
   - export GIT_SSH_COMMAND='ssh -i /root/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
-  - echo yes | git push github dev
+  - echo yes | git push github master
+  - echo yes | git push --tags
   when:
     branch:
-    - dev
+    - master
+    ref:
+    - refs/tags/*
