--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ steps:
   - echo -ne $${SSH_KEY} > /root/.ssh/id_rsa && echo >> /root/.ssh/id_rsa && chmod 600 /root/.ssh/id_rsa
   - export GIT_SSH_COMMAND='ssh -i /root/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
   - echo yes | git push github ${DRONE_BRANCH}
-  - echo yes | git push --tags
+  - echo yes | git push github --tags
   # when:
   #   branch:
   #   - master
