--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ type: docker
 name: default
 
 steps:
-- name: push-github
+- name: push-github-branch
   image: alpine/git
   environment:
     SSH_KEY:
@@ -19,12 +19,29 @@ steps:
   - echo -ne $${SSH_KEY} > /root/.ssh/id_rsa && echo >> /root/.ssh/id_rsa && chmod 600 /root/.ssh/id_rsa
   - export GIT_SSH_COMMAND='ssh -i /root/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
   - echo yes | git push github ${DRONE_BRANCH}
-  - echo yes | git push github --tags
-  # when:
-  #   branch:
-  #   - master
+  when:
+    branch:
+    - master
   #   ref:
   #   - refs/tags/*
+
+- name: push-github-tag
+  image: alpine/git
+  environment:
+    SSH_KEY:
+      from_secret: ssh_key
+  commands:
+  - git status
+  - git remote add github git@github.com:slimylove/scripts.git
+  - mkdir -p /root/.ssh && chmod 700 /root/.ssh
+  - echo -ne $${SSH_KEY} > /root/.ssh/id_rsa && echo >> /root/.ssh/id_rsa && chmod 600 /root/.ssh/id_rsa
+  - export GIT_SSH_COMMAND='ssh -i /root/.ssh/id_rsa -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+  - echo yes | git push github --tags
+  when:
+    # branch:
+    # - master
+    ref:
+    - refs/tags/*
 
 trigger:
   ref:
