1. 删除t.sh; 2. 补充init_centos.sh的说明; 3. 添加drone限制v开头的tag

--- a/.drone.yml
+++ b/.drone.yml
@@ -42,9 +42,9 @@ steps:
     # branch:
     # - master
     ref:
-    - refs/tags/*
+    - refs/tags/v*
 
 trigger:
   ref:
   - refs/heads/master
-  - refs/tags/*
+  - refs/tags/v*
