--- a/docker-compose-base.yml
+++ b/docker-compose-base.yml
@@ -36,7 +36,7 @@ services:
   aria2-pro:
     image: p3terx/aria2-pro:latest
     container_name: aria2
-    restart: no
+    restart: "no"
     environment:
       - TZ=Asia/Shanghai
       - PUID=${D_PUID:-$(id -u)}
@@ -55,7 +55,7 @@ services:
   ariang:
     image: p3terx/ariang:latest
     container_name: ariang
-    restart: no
+    restart: "no"
     environment:
       - TZ=Asia/Shanghai
       - PUID=${D_PUID:-$(id -u)}
@@ -69,7 +69,7 @@ services:
   sshwifty:
     image: niruix/sshwifty:latest
     container_name: sshwifty
-    restart: no
+    restart: "no"
     environment:
       - TZ=Asia/Shanghai
       - PUID=${D_PUID:-$(id -u)}
